# AoC2021

./: AoC2021.cabal  Main.hs  README.md  aoc2021.cabal
app/: Main.hs
