cabal-version: 2.4
name:          aoc2021
version:       0.1.0.0

author:     UnaryPlus
maintainer: ombspring@gmail.com

extra-source-files: README.md

executable aoc2021
    main-is: Main.hs

    build-depends:
      base ^>=4.14.1.0,
      containers,
      vector,
      lens

    ghc-options:      -Wall
    hs-source-dirs:   app
    default-language: Haskell2010
